fixed heart background and mobile spacing

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -15,7 +15,7 @@
   background-image: url(../images/delete-icon.png);
   position: absolute;
   top: 10px;
-  left: 371px;
+  right: 10px;
   width: 32px;
   height: 32px;
   background-color: transparent;
@@ -65,8 +65,10 @@
 }
 
 .card__like-btn_liked {
-  background-image: url("../images/like-icon-liked.svg");
+  background-image: url("../images/like_icon_liked.svg");
   opacity: 1;
+  background-repeat: no-repeat;
+  background-color: #fcf5e5;
 }
 
 .card__like-btn_liked:hover {
